--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "q": "^1.5.1",
     "sequelize": "^4.43.0",
     "sequelize-cli": "^5.4.0"
   }
