--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.2.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "node-mailjet": "^3.3.1",
     "nodemailer": "^6.0.0",
     "q": "^1.5.1",
     "sequelize": "^4.43.0",
