--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql2": "^1.6.5",
     "node-mailjet": "^3.3.1",
     "nodemailer": "^6.0.0",
