--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
     "port": 3306
   },
   "development": {
-    "username": "3BzhXBqany",
-    "password": "WK4A8dehHB",
-    "database": "3BzhXBqany",
-    "host": "remotemysql.com",
+    "username": "earts_laxzenith",
+    "password": "slax@123Zenith",
+    "database": "earts_hrm_new",
+    "host": "entitledarts.com",
     "dialect": "mysql",
     "port": 3306
   },
@@ -31,10 +31,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "3BzhXBqany",
-    "password": "WK4A8dehHB",
-    "database": "3BzhXBqany",
-    "host": "remotemysql.com",
+    "username": "earts_laxzenith",
+    "password": "slax@123Zenith",
+    "database": "earts_hrm_new",
+    "host": "entitledarts.com",
     "dialect": "mysql",
     "port": 3306
   }
